# Fractal

./: .gitignore  CMakeLists.txt  README.md
src/: Mandelbrot.cpp  Mandelbrot.h  Test.h  Zoom.cpp  Zoom.h  basic_zoom.cpp  main.cpp  main1.cpp  mandel.cpp  mandel.h  mouse_co.cpp  test.cpp  test2.cpp  write.cpp
